full hw assignment with working chat and rps functions. will only allow 2 players and the rest are welcome to spectate. these players will also be able to participate in chatting during the match

--- a/game.html
+++ b/game.html
@@ -23,32 +23,35 @@
             </div>
         </div>
     </div>
+    <!-- <button id = "test">CLICK FOR MY UID</button>
+    <button id = "testc">CLICK FOR CHALLENGER UID</button> -->
     <div class = "waiting"></div>
+    <div class = "loading">L o a d i n g . . .</div>
     <div class = "container">
         <div class = "change-name"><button>Change Username</button></div>
         <div class = "sign-out"><button>Sign Out</button></div>
         <div class = "selections-container">
-            <div class = "selections rock"><img class = "selectionImg" id = "r" src = "img/r.png"></div>
-            <div class = "selections paper"><img class = "selectionImg" id = "p" src = "img/p.png"></div>
-            <div class = "selections scissor"><img class = "selectionImg" id = "s" src = "img/s.png"></div>
+            <div class = "selections rock"><img class = "selectionImg" value = "Rock" src = "img/r.png"></div>
+            <div class = "selections paper"><img class = "selectionImg" value = "Paper" src = "img/p.png"></div>
+            <div class = "selections scissor"><img class = "selectionImg" value = "Scissor" src = "img/s.png"></div>
         </div>
         <div class = "results">
             <div class = "res win">
                 <div class = "counter-title">W</div>
-                <div class = "win-counter">222222</div>
+                <div class = "win-counter">0</div>
             </div>
             <div class = "res lose">
                 <div class = "counter-title">L</div>
-                <div class = "lose-counter">123</div>
+                <div class = "lose-counter">0</div>
             </div>
             <div class = "res tie">
                 <div class = "counter-title">T</div>
-                <div class = "tie-counter">3</div>
+                <div class = "tie-counter">0</div>
             </div>
         </div>
         <div class = "p2-selection">
             <div id = "p2C">Player 2 Selection</div>
-            <div id = "p2S">Rock</div>
+            <div id = "p2S"></div>
     </div>
         <div class = "chat">
             <div class = "chat-title"><span>$h!t Talk</span></div>
